Fix overflow on mobile

--- a/css/main.sass
+++ b/css/main.sass
@@ -391,6 +391,7 @@ body
       -webkit-hyphens: auto
       -moz-hyphens: auto
       hyphens: auto
+      overflow-wrap: break-word
     a
       color: #333
       text-decoration: underline
@@ -442,6 +443,10 @@ body
       margin-left: 30px
       margin-bottom: 12px
       padding-top: 2px
+      -webkit-hyphens: auto
+      -moz-hyphens: auto
+      hyphens: auto
+      overflow-wrap: break-word
       p
         padding: 0 0 golden-ratio(1rem,  1)
     ol li
@@ -642,6 +647,7 @@ code
   border: 1px solid #e8e8e8
   border-radius: 3px
   background-color: #eef
+  hyphens: none
 
 code
   padding: 1px 5px
